--- a/app/code/community/ProxiBlue/UpdateDownloadLinks/etc/changelog.txt
+++ b/app/code/community/ProxiBlue/UpdateDownloadLinks/etc/changelog.txt
@@ -1,3 +1,3 @@
 0.0.1 : Initial release
-0.0.2 : Fix bug when there are multiple downloads in an order. The update
-ensures only the correct download link is updated
+0.0.2 : Fix bug when there are multiple downloads in an order. The update ensures only the correct download link is updated
+0.0.3 : Remove unused code
